Добавить Gradio интерфейс и архитектуру AI-агентов для системы интервью
- Реализован Gradio веб-интерфейс (gradio_app.py, gradio_main.py) для проведения интервью с AI-агентами
- Добавлены базовые модули агентов: Observer, Interviewer, Evaluator (agents/)
- Введён клиент для взаимодействия с LiteLLM API (llm/client.py)
- Реализованы схемы данных для интервью и фидбэка (schemas/interview.py, schemas/feedback.py)
- Добавлен менеджер сессии интервью и логгер (interview/session.py, interview/logger.py)
- Расширена конфигурация: поддержка LiteLLM, настройка интервью, новые переменные окружения
- Обновлены Dockerfile, docker-compose.yml для поддержки Gradio и логирования
- Обновлён README с описанием архитектуры, инструкциями и форматом логов
- Добавлены docstring и аннотации типов для всех новых модулей

--- a/.env.example
+++ b/.env.example
@@ -1,49 +1,84 @@
+# =============================================================================
+#                    MULTI-AGENT INTERVIEW COACH - CONFIGURATION
+# =============================================================================
+# Скопируйте этот файл в .env и заполните обязательные поля (помечены [REQUIRED])
+# =============================================================================
+
 # -----------------------------
-# Compose-level configuration
+# [REQUIRED] LiteLLM Configuration
 # -----------------------------
-COMPOSE_PROJECT_NAME=compose_project_name   # Base name for containers and network
+# URL вашего LiteLLM прокси или совместимого OpenAI API
+LITELLM_BASE_URL=http://host.docker.internal:4000
+
+# API ключ (обязателен если LiteLLM требует авторизации)
+LITELLM_API_KEY=sk-your-api-key-here
+
+# Модель для использования (gpt-4o-mini, gpt-4o, claude-3-sonnet и т.д.)
+LITELLM_MODEL=gpt-4o-mini
+
+# Таймаут запросов в секундах
+LITELLM_TIMEOUT=120
+
+# Количество повторных попыток при ошибках
+LITELLM_MAX_RETRIES=3
+
+# -----------------------------
+# [REQUIRED] Interview Settings
+# -----------------------------
+# Директория для сохранения логов интервью
+INTERVIEW_LOG_DIR=/code/interview_logs
+
+# Название вашей команды (будет в логах)
+TEAM_NAME=My Team Name
+
+# Максимальное количество ходов в интервью
+MAX_TURNS=20
+
+# -----------------------------
+# Docker Compose
+# -----------------------------
+COMPOSE_PROJECT_NAME=interview_coach
 
 # -----------------------------
 # Networking and ports
 # -----------------------------
-BACKEND_PORT=8000          # Exposed backend port
-NGINX_EXTERNAL_PORT=90   # Host port for Nginx
-REDIS_CACHE_PORT=6379      # Exposed Redis port
+BACKEND_PORT=8000
+NGINX_EXTERNAL_PORT=90
+GRADIO_PORT=7860
 
 # -----------------------------
 # Redis cache settings
 # -----------------------------
-REDIS_CACHE_HOST=redis_cache  # Service name in docker-compose network
-REDIS_CACHE_PORT=6379         # Redis TCP port
+REDIS_CACHE_HOST=redis_cache
+REDIS_CACHE_PORT=6379
 
 # -----------------------------
 # Application metadata
 # -----------------------------
-APP_NAME=APP_NAME
-APP_DESCRIPTION=APP_DESCRIPTION
+APP_NAME=Multi-Agent Interview Coach
+APP_DESCRIPTION=AI-powered technical interview system
 APP_VERSION=0.1.0
 LICENSE_NAME=Proprietary
 CONTACT_NAME=Owner
 CONTACT_EMAIL=owner@example.com
 
 # -----------------------------
-# Environment selection
-# Allowed values: local | staging | production
+# Environment
 # -----------------------------
 ENVIRONMENT=local
 
 # -----------------------------
 # Client-side caching
 # -----------------------------
-CLIENT_CACHE_MAX_AGE=60   # Seconds for Cache-Control: public, max-age=...
+CLIENT_CACHE_MAX_AGE=60
 
 # -----------------------------
 # Logging
 # -----------------------------
-APP_TZ_OFFSET=3           # Hours offset for log timestamps
-APP_LOG_DIR=/code/logs    # Directory for system.log and personal.log
+APP_TZ_OFFSET=3
+APP_LOG_DIR=/code/logs
 
 # -----------------------------
 # Runtime tuning
 # -----------------------------
-RESERVED_CPUS=6           # CPUs to reserve from Gunicorn worker calculation
+RESERVED_CPUS=6
