Интеграция Langfuse для observability: трекинг LLM вызовов, трейсов интервью и метрик токенов, обновление README и docker-compose
- Добавлен модуль observability с LangfuseTracker и SessionMetrics для трекинга LLM generation, span’ов и токен-метрик по сессии
- LLMClient теперь создаёт generation в Langfuse для каждого вызова, сохраняет usage и ошибки
- InterviewSession и агенты используют Langfuse для создания trace, span’ов ключевых этапов (greeting, user_message, observer_analysis, interviewer_response, final_feedback, difficulty_change), финализируют метрики по завершении
- В UI финальный фидбэк дополняется блоком с токен-метриками сессии
- Добавлены настройки Langfuse в .env.example и pyproject.toml, обновлён config.py
- docker-compose.yml: добавлены сервисы langfuse и langfuse-db (PostgreSQL), настройка переменных окружения
- README и DOC.md существенно расширены: описание observability, метрик, инструкции по запуску Langfuse
- Мелкие правки и упрощение docstring/комментариев, удалены лишние заголовки в Dockerfile и default.conf

--- a/.env.example
+++ b/.env.example
@@ -82,3 +82,12 @@ APP_LOG_DIR=/code/logs
 # Runtime tuning
 # -----------------------------
 RESERVED_CPUS=6
+
+# -----------------------------
+# LangFuze settings
+# -----------------------------
+# В docker-compose важно: host должен быть "http://langfuse:3000", а не localhost.
+LANGFUSE_ENABLED=true
+LANGFUSE_HOST=http://langfuse:3000
+LANGFUSE_PUBLIC_KEY=pk-lf-your-public-key-here
+LANGFUSE_SECRET_KEY=sk-lf-your-secret-key-here
