--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python-docx = "1.2.0"
 redis = "^5.3.0"
 gradio = "^5.0"
 nest-asyncio = "^1.6.0"
+langfuse = "^2.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
@@ -65,7 +66,7 @@ lines_between_types = 1
 combine_as_imports = true
 sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
 known_first_party = ["src", "tests"]
-known_third_party = ["fastapi", "pydantic", "sqlalchemy", "uvicorn", "pandas", "numpy", "gradio", "httpx"]
+known_third_party = ["fastapi", "pydantic", "sqlalchemy", "uvicorn", "pandas", "numpy", "gradio", "httpx", "langfuse"]
 
 [tool.flake8]
 max-line-length = 90
